Register Page created

--- a/ff_dms/src/App.css
+++ b/ff_dms/src/App.css
@@ -18,7 +18,7 @@
   align-items: center;
 }
 
-.logo {
+.logoH {
   width: 100px; /* Adjust this size according to your logo */
   height: auto; /* Maintain aspect ratio */
   margin-right: 20px;
