--- a/ff_dms/src/pages/LoginPage/logingPage.css
+++ b/ff_dms/src/pages/LoginPage/logingPage.css
@@ -20,13 +20,13 @@
   }
   
   .left-image {
-    max-width: 100%;
+    max-width: 75%;
     height: auto;
   }
   
   .logo {
     text-align: left;
-    width: 250px;
+    width: 450px;
   }
 
 .logo img {
@@ -40,26 +40,30 @@
   .login-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    width: 470px;
+    align-items: left;
     margin-bottom: 20px;
   }
   
   input {
-    width: 250px;
+    width: 450px;
     padding: 10px;
     margin-bottom: 10px;
   }
   
   .forgot-password {
-    margin-bottom: 20px;
+    text-align: right;
+    margin-bottom: 10px;
   }
   
   .login-button {
     padding: 10px 20px;
-    background-color: #3498db;
+    background-color: #4A9230;
     color: white;
     border: none;
     cursor: pointer;
+    border-radius: 6px;
+    width: 470px;
   }
   
   .social-login {
@@ -67,7 +71,7 @@
   }
   
   .social-login img {
-    width: 30px;
-    margin-right: 10px;
+    width: 470px;
+    margin-right: 0px;
   }
   
